<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/goToUsers"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/go_to_users_list_button_description"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/go_back_button_image"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userProfileContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:visibility="invisible"
        android:background="@drawable/list_item_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToUsers"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/userProfileImage"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/user_profile_image_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@drawable/ic_launcher_background" />

        <GridLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/userProfileFirstLastMaidenName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_marginTop="8dp"
                android:paddingBottom="8dp"
                android:textSize="15sp"
                tools:text="Robert Roberto Petrovich" />

            <TextView
                android:id="@+id/userProfileBirthDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/between_user_property_and_data"
                android:text="@string/user_profile_birth_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/userProfileImage"
                app:layout_constraintTop_toBottomOf="@+id/userProfileFirstLastMaidenName" />

            <TextView
                android:id="@+id/userProfileBirthDateData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="2000-12-25" />

            <TextView
                android:id="@+id/userProfileGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/between_user_property_and_data"
                android:text="@string/user_profile_gender"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/userProfileImage"
                app:layout_constraintTop_toBottomOf="@+id/userProfileBirthDate" />

            <TextView
                android:id="@+id/userProfileGenderData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Man" />

            <TextView
                android:id="@+id/userProfilePhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/between_user_property_and_data"
                android:text="@string/user_profile_phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/userProfileImage"
                app:layout_constraintTop_toBottomOf="@+id/userProfileEmail" />

            <TextView
                android:id="@+id/userProfilePhoneData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="8(800)-555-35-35" />
            <TextView
                android:id="@+id/userProfileEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/between_user_property_and_data"
                android:text="@string/user_profile_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/userProfileImage"
                app:layout_constraintTop_toBottomOf="@+id/userProfileGender" />

            <TextView
                android:id="@+id/userProfileEmailData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="dublongold@gmail.com" />

            <TextView
                android:id="@+id/userProfileAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/between_user_property_and_data"
                android:paddingTop="0dp"
                android:paddingBottom="8dp"
                android:text="@string/user_profile_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/userProfileImage"
                app:layout_constraintTop_toBottomOf="@+id/userProfilePhone" />

            <TextView
                android:id="@+id/userProfileAddressData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                tools:text="1745 Е Some body" />
        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/userProfilePostsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible"
        tools:visibility="visible"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userProfileContainer">

        <TextView
            android:id="@+id/userProfilePostTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:textSize="20sp"
            android:text="@string/user_profile_posts"/>

        <include
            android:id="@+id/userProfileFirstPost"
            layout="@layout/posts_list_item"
            android:visibility="invisible"
            tools:visibility="visible"/>
        <include
            android:id="@+id/userProfileSecondPost"
            layout="@layout/posts_list_item"
            android:visibility="invisible"
            tools:visibility="visible"/>
        <include
            android:id="@+id/userProfileThirdPost"
            layout="@layout/posts_list_item"
            android:visibility="invisible"
            tools:visibility="visible"/>

        <Button
            android:id="@+id/userProfileSeeMorePosts"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_more_user_posts"
            android:visibility="invisible"
            tools:visibility="visible"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/userProfileLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/connectionLostImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="invisible"
        android:contentDescription="@string/connection_lost_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/connection_lost_image" />

</androidx.constraintlayout.widget.ConstraintLayout>